--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
 	"dependencies": {
 		"react-icons": "^5.2.1"
+	},
+	"devDependencies": {
+		"webpack": "^5.91.0",
+		"webpack-cli": "^5.1.4"
 	}
 }
